# optom-api

./: .env.local  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  \  alembic.ini  docker-compose.yaml  makefile  pyproject.toml  setup.cfg  test.env  tox.ini
.github/workflows/: build.yml
app/: main.py
app/auth/: __init__.py  password.py  token.py  user.py  verify.py
app/crud/: __init__.py  exams.py  patients.py  users.py
app/routers/: auth.py  dashboard.py  patients.py  users.py
app/schemas/: __init__.py  dispensers.py  exams.py  optometrists.py  patients.py  specdispenses.py  specprescriptions.py  tokens.py  users.py
app/sql/: __init__.py  database.py  models.py
migrations/: env.py
migrations/versions/: 18d04de73c3a_modifying_user.py  7002fd888c92_init.py
tests/: conftest.py  test_dashboard.py  test_main.py  test_optometrist.py  test_patients.py  test_users.py
